20080614 ui/widget/memory.c: fix the widget memory browse display
         (patch #1991755) (Gergely Szasz).
20080614 ui/xlib/xui.c: use XCheckMaskEvent() instead of XCheckIfEvent() with
         an empty test (patch #1991780) (Gergely Szasz).
20080614 menu_data.dat: ROM shortcut key for TS2068 doesn't work (Fred).
20080614 ui/widget/{widget_internals.h,widget.c}: fix disabled widget menu
         entries (thanks, Phil) (Fred).
20080616 debugger/{breakpoint.c,debugger.c,debugger_internals.h},
         disk/{beta.[ch],fdd.[ch],plusd.[ch],upd_fdc.[ch],wd_fdc.[ch]},
         event.[ch],fuse.c,loader.c,machine.c,menu.c,periph.c,profile.c,
         rzx.[ch],spectrum.[ch],tape.[ch],timer/timer.[ch],ui/gtk/debugger.c,
         z80/{coretest.c,z80.[ch],z80.pl,z80_ops.c}: refactor the event
         architecture so that modules register their own events with the
         event system (patch #1991683).
20080619 event.c: add missing #include <string.h>.
20080619 ui/gtk/gtkkeyboard.c: remove X dependency for unshifting keys.
20080619 rzx.c: add debugger event for end of RZX playback.
20080621 debugger/breakpoint.c: don't try copying an empty condition.
20080621 debugger/debugger.c: when exiting, quit the main emulation loop
	 immediately.
20080623 compat/{amiga/Makefile.am,morphos/Makefile.am,unix/{Makefile.am,
         file.c},wii/{Makefile.am,file.c},win32/Makefile.am},compat.h,if1.c,
         utils.c: factor out low-level file handling into compat/<os>/file.c;
         needed for Wii port.
20080623 compat/{unix/file.c,wii/file.c},utils.c: don't produce an error
	 message if opening a file failed as this can be a normal result.
20080623 utils.c: call the right function when reading a file.
20080624 ui/widget/query.c: make widget queries navigable keyboardlessly
         (Fred).
20080626 menu.c,ui/{gtk/gtkui.c,widget/menu.c,win32/win32ui.c}: amalgamate
         triplicated functions (patch #1991628) (Gergely Szasz).